Fixed checkbox jump bug

--- a/sass/background.scss
+++ b/sass/background.scss
@@ -91,6 +91,7 @@ a {
 }
 
 section {
+    position: relative;
 
     & > div:first-child {
         display: inline-block;
